--- a/src/Components/InputFeeder/InputFeeder.css
+++ b/src/Components/InputFeeder/InputFeeder.css
@@ -20,8 +20,9 @@
    justify-content: space-evenly ; 
    /* background-color:#ff9191;  */
    /* background-color:#CCCCFF;  */
-   background-color: #183153; 
-   /* border:1px solid black; */
+   background-color: #1a1c3c; 
+  
+    border:1px solid white; 
 }
 
 .listhead{
@@ -37,4 +38,18 @@
 .navbtn{
     background-color:black; 
     color:white; 
+}
+
+.favlisthead{
+    background-color: var(--purple-200)
+}
+.favitem{
+    padding:2%; 
+   display:flex; 
+   flex-direction:row; 
+   justify-content: space-evenly ; 
+    background-color:var(--orange-100);
+    color:black;  
+   
+    border:1px solid white; 
 }
